# Marisselle-Teacher

./: .nojekyll  .teacher_progress.json  CMakeLists.txt  README.md  _headers  _redirects  curriculum.json  index.html  keepalive.js  ollama-worker.js  sw.js  teacher-tracker.js  teacher.js  tracker.json
.github/workflows/: auto-teach.yml  deploy.yml
API/teacher/: status.js  status.json
phi3-model/: config.json
src/: gguf_parser.cpp  gguf_parser.h  inference_engine.cpp  inference_engine.h  kv_cache.cpp  model_loader.cpp  model_loader.h  ollama_bridge.cpp  ollama_bridge.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h
training_data/: lesson_001_Who_Am_I____Marisselle_Identity.md
